[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Thomas den Hollander <denhollander.thomas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { version = "0.3", features = ["bench"] }
indoc = "1"
thiserror = "1"
anyhow = "1"
itertools = "0.10"

[profile.release]
lto = true
codegen-units = 1
debug = true
