[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Thomas den Hollander <denhollander.thomas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-main = { path= "../aoc", features = ["bench"] }
indoc = "1"
thiserror = "1"
anyhow = "1"
itertools = "0.10"
nom = "7.1"
memchr = "2"
arrayvec = "0.7"
num = "0.4"

[profile.release]
lto = true
codegen-units = 1
debug = false
